--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <main class="max-w-7xl mx-auto relative">
-  <app-navbar></app-navbar>
-  <app-hero></app-hero>
-  <!--  <About />-->
-  <!--  <Projects />-->
-  <!--  <Clients />-->
-  <!--  <WorkExperience />-->
-  <!--  <Contact />-->
-  <!--  <Footer />-->
+    <app-navbar></app-navbar>
+    <app-hero></app-hero>
+    <app-about></app-about>
+    <app-projects></app-projects>
+    <app-testimonials></app-testimonials>
+    <app-contact></app-contact>
+    <app-footer></app-footer>
 </main>
