--- a/src/app/sections/hero/hero.component.html
+++ b/src/app/sections/hero/hero.component.html
@@ -1,16 +1,12 @@
-<section class="min-h-screen w-full flex flex-col relative" id="home">
-  <div class="w-full mx-auto flex flex-col sm:mt-36 mt-20 c-space gap-3">
-    <p class="sm:text-3xl text-xl font-medium text-white text-center font-generalsans">
-      Hi, I am Felix <span class="waving-hand">👋</span>
-    </p>
-    <p class="hero_tag text-gray_gradient">Building Products & Brands</p>
-  </div>
+<section class="relative w-full min-h-screen flex flex-col items-center pt-36 pb-16 gap-10" id="home">
+    <!-- Text Content -->
+    <div class="z-10 flex flex-col items-center gap-3">
+        <p class="sm:text-3xl text-xl font-medium text-white text-center font-generalsans">
+            Hi, I am Felix <span class="waving-hand">👋</span>
+        </p>
+        <p class="hero_tag text-gray_gradient text-center">Code Meets Creativity</p>
+    </div>
 
-
-  <!-- CTA -->
-  <div class="absolute bottom-7 left-0 right-0 w-full z-10 c-space">
-    <a href="#about" class="w-fit">
-      <app-button name="Let's work together" [isBeam]="true" containerClass="sm:w-fit w-full sm:min-w-96" />
-    </a>
-  </div>
+    <!-- Canvas for Three.js Background -->
+    <canvas #canvas class="absolute inset-0 w-full h-full z-0 pointer-events-none"></canvas>
 </section>
