--- a/src/app/sections/projects/projects.component.html
+++ b/src/app/sections/projects/projects.component.html
@@ -25,24 +25,21 @@
                         rel="noreferrer"
                 >
                     <p>Check Live Site</p>
-                    <img src="/assets/arrow-up.png" alt="arrow" class="w-3 h-3" />
+                    <img src="/assets/arrow-up.png" alt="arrow" class="w-3 h-3"/>
                 </a>
-
             </div>
 
             <div class="flex justify-between items-center mt-7">
                 <button class="arrow-btn" (click)="handleNavigation('previous')">
-                    <img src="/assets/left-arrow.png" alt="left arrow" />
+                    <img src="/assets/left-arrow.png" alt="left arrow"/>
                 </button>
-
                 <button class="arrow-btn" (click)="handleNavigation('next')">
-                    <img src="/assets/right-arrow.png" alt="right arrow" class="w-4 h-4" />
+                    <img src="/assets/right-arrow.png" alt="right arrow" class="w-4 h-4"/>
                 </button>
             </div>
         </div>
 
-        <!-- 3D Viewport Placeholder (you can hook up your Three.js Canvas here later) -->
-        <!-- projects.component.html -->
+        <!-- 3D Canvas View -->
         <div class="border border-black-300 bg-black-200 rounded-lg h-96 md:h-full relative">
             <canvas #canvas class="absolute top-0 left-0 w-full h-full"></canvas>
         </div>
