--- a/src/app/sections/contact/contact.component.html
+++ b/src/app/sections/contact/contact.component.html
@@ -1,5 +1,5 @@
 <section class="c-space my-20" id="contact">
-    <div *ngIf="alert.show" class="alert" [ngClass]="alert.type">{{ alert.text }}</div>
+    <div *ngIf="alert().show" class="alert" [ngClass]="alert().type">{{ alert().text }}</div>
 
     <div class="flex justify-center">
         <div class="terminal">
@@ -11,11 +11,10 @@
             <div class="terminal-body">
                 <h3 class="head-text">Let's talk</h3>
                 <p class="text-lg text-white-600 mt-3">
-                    Whether you’re looking to build a new website, improve your existing platform, or bring a unique project to
-                    life, I’m here to help.
+                    Whether you’re looking to build a new website, improve your existing platform, or bring a unique project to life, I’m here to help.
                 </p>
 
-                <form #contactForm="ngForm" (ngSubmit)="handleSubmit()" class="mt-12 flex flex-col space-y-7">
+                <form (ngSubmit)="handleSubmit()" class="mt-12 flex flex-col space-y-7">
                     <label class="space-y-3">
                         <span class="field-label">Full Name</span>
                         <input name="name" [(ngModel)]="form.name" required class="field-input" placeholder="ex., John Doe" />
@@ -23,30 +22,16 @@
 
                     <label class="space-y-3">
                         <span class="field-label">Email address</span>
-                        <input
-                                type="email"
-                                name="email"
-                                [(ngModel)]="form.email"
-                                required
-                                class="field-input"
-                                placeholder="ex., johndoe@gmail.com"
-                        />
+                        <input type="email" name="email" [(ngModel)]="form.email" required class="field-input" placeholder="ex., johndoe@gmail.com" />
                     </label>
 
                     <label class="space-y-3">
                         <span class="field-label">Your message</span>
-                        <textarea
-                                name="message"
-                                [(ngModel)]="form.message"
-                                required
-                                rows="5"
-                                class="field-input"
-                                placeholder="Share your thoughts or inquiries..."
-                        ></textarea>
+                        <textarea name="message" [(ngModel)]="form.message" required rows="5" class="field-input" placeholder="Share your thoughts or inquiries..."></textarea>
                     </label>
 
-                    <button class="field-btn" type="submit" [disabled]="loading">
-                        {{ loading ? 'Sending...' : 'Send Message' }}
+                    <button class="field-btn" type="submit" [disabled]="loading()">
+                        {{ loading() ? 'Sending...' : 'Send Message' }}
                         <img src="/assets/arrow-up.png" alt="arrow-up" class="field-btn_arrow" />
                     </button>
                 </form>
