improved hero page

--- a/src/app/sections/projects/projects.component.html
+++ b/src/app/sections/projects/projects.component.html
@@ -1,4 +1,4 @@
-<section class="c-space my-20">
+<section class="c-space my-20" id="projects">
     <p class="head-text">My Work</p>
 
     <div class="grid lg:grid-cols-2 grid-cols-1 mt-12 gap-5 w-full">
