--- a/src/app/sections/hero/hero.component.html
+++ b/src/app/sections/hero/hero.component.html
@@ -7,6 +7,8 @@
         <p class="hero_tag text-gray_gradient text-center">Code Meets Creativity</p>
     </div>
 
-    <!-- Canvas for Three.js Background -->
+    <div class="loading-overlay" *ngIf="isLoading">
+        <p>Loading...</p>
+    </div>
     <canvas #canvas class="absolute inset-0 w-full h-full z-0 pointer-events-none"></canvas>
 </section>
