--- a/src/app/sections/hero/hero.component.scss
+++ b/src/app/sections/hero/hero.component.scss
@@ -30,3 +30,19 @@ canvas {
   font-size: 1.5rem;
 }
 
+.spinner {
+  border: 4px solid rgba(255, 255, 255, 0.1);
+  border-top: 4px solid white;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
