--- a/src/app/sections/contact/contact.component.html
+++ b/src/app/sections/contact/contact.component.html
@@ -60,7 +60,7 @@
 
                     <button class="field-btn" type="submit" [disabled]="loading()">
                         {{ loading() ? 'Sending...' : 'Send Message' }}
-                        <img src="/assets/arrow-up.png" alt="arrow-up" class="field-btn_arrow"/>
+                        <img src="assets/arrow-up.png" alt="arrow-up" class="field-btn_arrow"/>
                     </button>
                 </form>
             </div>
