--- a/src/app/sections/footer/footer.component.html
+++ b/src/app/sections/footer/footer.component.html
@@ -7,10 +7,10 @@
 
     <div class="flex gap-3">
         <div class="social-icon">
-            <img src="/assets/github.svg" alt="github" class="w-1/2 h-1/2" />
+            <img src="assets/github.svg" alt="github" class="w-1/2 h-1/2" />
         </div>
         <div class="social-icon">
-            <img src="/assets/linkedin.svg" alt="linkedin" class="w-1/2 h-1/2" />
+            <img src="assets/linkedin.svg" alt="linkedin" class="w-1/2 h-1/2" />
         </div>
     </div>
 
