--- a/src/app/sections/projects/projects.component.html
+++ b/src/app/sections/projects/projects.component.html
@@ -25,16 +25,16 @@
                         rel="noreferrer"
                 >
                     <p>Check Live Site</p>
-                    <img src="/assets/arrow-up.png" alt="arrow" class="w-3 h-3"/>
+                    <img src="assets/arrow-up.png" alt="arrow" class="w-3 h-3"/>
                 </a>
             </div>
 
             <div class="flex justify-between items-center mt-7">
                 <button class="arrow-btn" (click)="handleNavigation('previous')">
-                    <img src="/assets/left-arrow.png" alt="left arrow"/>
+                    <img src="assets/left-arrow.png" alt="left arrow"/>
                 </button>
                 <button class="arrow-btn" (click)="handleNavigation('next')">
-                    <img src="/assets/right-arrow.png" alt="right arrow" class="w-4 h-4"/>
+                    <img src="assets/right-arrow.png" alt="right arrow" class="w-4 h-4"/>
                 </button>
             </div>
         </div>
