--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div class="bg-green-500 text-white p-4">Tailwind test box</div>
+
+
 <main class="max-w-7xl mx-auto relative">
     <app-navbar></app-navbar>
     <app-hero></app-hero>
