--- a/src/app/sections/footer/footer.component.html
+++ b/src/app/sections/footer/footer.component.html
@@ -6,12 +6,12 @@
     </div>
 
     <div class="flex gap-3">
-        <div class="social-icon">
+        <a href="https://github.com/FelixHolly" target="_blank" rel="noopener noreferrer" class="social-icon">
             <img src="assets/github.svg" alt="github" class="w-1/2 h-1/2" />
-        </div>
-        <div class="social-icon">
+        </a>
+        <a href="https://www.linkedin.com/in/felix-hollndonner" target="_blank" rel="noopener noreferrer" class="social-icon">
             <img src="assets/linkedin.svg" alt="linkedin" class="w-1/2 h-1/2" />
-        </div>
+        </a>
     </div>
 
     <p class="text-white-500">© {{year}} Felix Hollndonner. All rights reserved.</p>
