improved about me updated README.md

--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,7 +1,7 @@
-<button class="btn" [ngClass]="containerClass">
+<button class="btn" [ngClass]="containerClass" (click)="handleClick()">
   <span *ngIf="isBeam" class="relative flex h-3 w-3 mr-2">
     <span class="btn-ping"></span>
     <span class="btn-ping_dot"></span>
   </span>
-  {{ name }}
+    {{ name }}
 </button>
