--- a/src/app/sections/about/about.component.html
+++ b/src/app/sections/about/about.component.html
@@ -3,10 +3,12 @@
         <!-- Grid 1 -->
         <div class="col-span-1 xl:row-span-3">
             <div class="grid-container">
-                <img src="assets/me.png" class="w-full rounded-3xl sm:h-[276px] h-fit object-contain "  alt="picture of Felix"/>
+                <img src="assets/me.png" class="w-full rounded-3xl sm:h-[276px] h-fit object-contain" alt="picture of Felix" />
                 <div>
                     <p class="grid-headtext">Hi, I’m Felix</p>
-                    <p class="grid-subtext">With 3 years of experience, I have honed my skills...</p>
+                    <p class="grid-subtext">
+                        I’m a passionate Full Stack Developer with 3+ years of experience building web applications using Angular, Java, and modern web technologies. I enjoy turning complex problems into elegant, user-friendly solutions.
+                    </p>
                 </div>
             </div>
         </div>
@@ -14,10 +16,12 @@
         <!-- Grid 2 -->
         <div class="col-span-1 xl:row-span-3">
             <div class="grid-container">
-                <img src="assets/grid2.png" class="w-full sm:h-[276px] h-fit object-contain"  alt="picture of skills"/>
+                <img src="assets/grid2.png" class="w-full sm:h-[276px] h-fit object-contain" alt="picture of skills" />
                 <div>
                     <p class="grid-headtext">Tech Stack</p>
-                    <p class="grid-subtext">I specialize in various languages and tools...</p>
+                    <p class="grid-subtext">
+                        I work with Angular, TypeScript, Java, Spring Boot, and Jest—focusing on creating responsive UIs and robust backend systems. I also use tools like TailwindCSS, NgRx, and Docker to enhance development efficiency.
+                    </p>
                 </div>
             </div>
         </div>
@@ -29,20 +33,24 @@
                     <div #globeCanvas style="width: 326px; height: 326px"></div>
                 </div>
                 <div>
-                    <p class="grid-headtext">I’m flexible with time zones & locations</p>
-                    <p class="grid-subtext">Based in Las Vegas, USA. Open to remote work.</p>
+                    <p class="grid-headtext">Open to Global Collaboration</p>
+                    <p class="grid-subtext">
+                        Based in Las Vegas, USA — but I work comfortably across time zones. Whether you're in Europe, Asia, or the Americas, I'm ready to sync up and contribute remotely.
+                    </p>
                 </div>
-                <app-button name="Let's work together" [isBeam]="true" containerClass="w-full" />
+                <app-button name="Let's work together" [isBeam]="true" containerClass="w-full" [navigate]="'#contact'"/>
             </div>
         </div>
 
         <!-- Grid 3 -->
         <div class="xl:col-span-2 xl:row-span-3">
             <div class="grid-container">
-                <img src="assets/grid3.png" class="w-full sm:h-[266px] h-fit object-contain"  alt="picture of a terminal"/>
+                <img src="assets/grid3.png" class="w-full sm:h-[266px] h-fit object-contain" alt="picture of a terminal" />
                 <div>
-                    <p class="grid-headtext">My Passion for Coding</p>
-                    <p class="grid-subtext">I love solving problems and building with code.</p>
+                    <p class="grid-headtext">Driven by Curiosity & Code</p>
+                    <p class="grid-subtext">
+                        I love the creative and logical challenges of coding. From building UI components to optimizing backend performance, I thrive on crafting clean, efficient, and impactful software.
+                    </p>
                 </div>
             </div>
         </div>
@@ -50,9 +58,9 @@
         <!-- Contact Copy -->
         <div class="xl:col-span-1 xl:row-span-2">
             <div class="grid-container">
-                <img src="assets/grid4.png" class="w-full md:h-[180px] sm:h-[276px] h-fit object-cover sm:object-top"  alt="picture of an emails symbol"/>
+                <img src="assets/grid4.png" class="w-full md:h-[180px] sm:h-[276px] h-fit object-cover sm:object-top" alt="picture of an emails symbol" />
                 <div class="space-y-2">
-                    <p class="grid-subtext text-center">Contact me</p>
+                    <p class="grid-subtext text-center">Let’s Connect - Copy Email</p>
                     <div class="copy-container" (click)="copyEmail()">
                         <img [src]="hasCopied() ? 'assets/tick.svg' : 'assets/copy.svg'" alt="copy" />
                         <p class="lg:text-2xl md:text-xl font-medium text-gray_gradient text-white"></p>
