--- a/src/app/sections/navbar/navbar.component.html
+++ b/src/app/sections/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <header class="fixed top-0 left-0 right-0 z-50 bg-black/90">
   <div class="max-w-7xl mx-auto">
     <div class="flex justify-between items-center py-5 mx-auto c-space">
-      <a href="/public" class="text-neutral-400 font-bold text-xl hover:text-white transition-colors">
+      <a href="/#home" class="text-neutral-400 font-bold text-xl hover:text-white transition-colors">
         Felix
       </a>
 
